# wireframe-3d-viewer

./: README.md
src/: CMakeLists.txt  Makefile  controller.h
src/3DViewer_2/: defaults.qrc  fshader.glsl  fshaderP.glsl  imagesaver.cc  imagesaver.h  main.cpp  mainwindow.cc  mainwindow.h  mainwindow.ui  oglwidget.cc  oglwidget.h  shaders.qrc  viewersettings.cc  viewersettings.h  vshader.glsl
src/3DViewer_2/defaults/: session.conf
src/affine_transformations/: matrix4X4.cc  matrix4X4.h  matrix4X4_transform.cc
src/parser/: parser.cc  parser.h
src/viewer_test/: affine_transformations_tests.cc  parser_tests.cc
